--- a/Leave/WebContent/index.html
+++ b/Leave/WebContent/index.html
@@ -15,14 +15,8 @@
 		</script>
 		<link rel="stylesheet" type="txt/css" href="css/style.css">
 		<script>
-			new sap.m.Shell({
-				backgroundColor:"white",
-				app : new sap.ui.core.ComponentContainer({
-					name : "Leave",
-					hight: "auto"
-					
-					
-				}),
+			new sap.ui.core.ComponentContainer({
+					name : "Leave"
 			}).placeAt("content");
 		</script>
 
