--- a/demo_app/WebContent/index.html
+++ b/demo_app/WebContent/index.html
@@ -4,8 +4,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta http-equiv='Content-Type' content='text/html;charset=UTF-8'/>
 
-		<script src="resources/sap-ui-core.js"
-				id="sap-ui-bootstrap"
+		<script id="sap-ui-bootstrap"
+				src="https://sapui5.hana.ondemand.com/1.28.21/resources/sap-ui-core.js"
 				data-sap-ui-libs="sap.m"
 				data-sap-ui-theme="sap_bluecrystal">
 		</script>
