--- a/demo_app/WebContent/index.html
+++ b/demo_app/WebContent/index.html
@@ -6,7 +6,7 @@
 
 		<script id="sap-ui-bootstrap"
 				src="https://sapui5.hana.ondemand.com/1.28.21/resources/sap-ui-core.js"
-				data-sap-ui-libs="sap.m"
+				data-sap-ui-libs="sap.m, sap.ui.layout"
 				data-sap-ui-theme="sap_bluecrystal">
 		</script>
 		<!-- only load the mobile lib "sap.m" and the "sap_bluecrystal" theme -->
