--- a/demo_app/WebContent/index.html
+++ b/demo_app/WebContent/index.html
@@ -26,7 +26,7 @@
     FB.init({
       appId      : '1535377550103720',
       xfbml      : true,
-      version    : 'v2.5'
+      version    : 'v2.6'
     });
   };
 
@@ -39,5 +39,11 @@
    }(document, 'script', 'facebook-jssdk'));
 </script>
 		<div id="content"></div>
+		<div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
 	</body>
 </html>
